syntax = "proto2";

package noscope;

message VideoParameter {
  optional string path = 1;
  optional uint32 skip = 2 [default = 30];
  optional uint32 frame_size = 3;
  optional uint32 start = 4 [default = 1];
}

message StreamParameter {
  optional string avg_fname = 1;
  optional bool use_blocked = 2 [default = false];
  optional bool skip_diff_detection = 3 [default = false];
  optional float lower_thresh = 4 [default = 0.0];
  optional float upper_thresh = 5 [default = 10000000];
  optional bool const_ref = 6 [default = false];
  optional uint32 ref = 7 [default = 0];
  optional float distill_thresh_lower = 8;
  optional float distill_thresh_upper = 9;

  optional VideoParameter video_param = 10;
}
